# osu-beatmap-to-mania-converter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.git_hooks/: commit-msg  commit-msg.bat
build_script/: build_main.bat
src/: README.md  cli.py  cui.py  interactive_interface.py  main.py  main_generate_beatmap_difficulty_data_chart.py  webui.py
src/config/: __init__.py
src/custom_types/: __init__.py
src/exporter/: __init__.py  generate_beatmap_difficulty_data_chart.py  generate_mania_1k_osu_file.py  generate_mania_2k_osu_file.py  generate_mania_3k_osu_file.py  generate_mania_4k_osu_file.py  generate_mania_5k_osu_file.py  generate_mania_6k_osu_file.py  generate_mania_nk_osu_file.py  generate_mania_osu_file.py
src/logger/: __init__.py
src/message/: __init__.py  cli_banner.py  cli_logo.py  const_url.py  version.py
src/message/i18n/: __init__.py  chinese_simplified_china.py
src/options_default/: __init__.py  mania_2k_options_default.py  options_default.py
src/processor/: __init__.py  any_metadata_to_mania_1k.py  any_metadata_to_mania_2k.py  any_object_to_mania_1k.py  std_metadata_to_mania.py  std_object_type_to_mania.py
src/processor/hit_object_converter/: any_object_type_to_mania_1k.py  mania_object_to_mania_1k.py  std_object_type_to_mania.py  std_object_type_to_mania_1k.py  taiko_object_type_to_mania_5k.py  taiko_object_type_to_mania_6k.py
src/reader/: __init__.py  hit_objects_parser.py  load_hit_objects_list.py  load_osu_file.py  load_osu_file_metadata.py  load_osu_file_timing_points_list.py
(+18 files in other folders)
